--- a/public/src/partials/section_home.html
+++ b/public/src/partials/section_home.html
@@ -1,20 +1,17 @@
-<div id="home" class="slide">
+<div id="home" class="slide slide--home">
   <div class="home-bg"></div>
   <div class="v-center">
     <div class="v-center-content">
       <div class="home-taglines-wrapper">
-        <div id="home-tagline-1" class="home-tagline">
-          <div class="home-tagline-content_">
-            Welcome to Green St
-          </div>  
-        </div>
 
-        <div id="home-tagline-2" class="home-tagline">
-          <div class="home-tagline-content">
-            A marijuana focused agency
-          </div>  
+        <div id="home-tagline-1" class="home-tagline">
+          Welcome to Green St
         </div>
-      </div>   
+        <div id="home-tagline-2" class="home-tagline">
+          A marijuana focused agency
+        </div>
+        
+      </div>
     </div>
   </div>
 </div>
