--- a/public/src/scss/green-street/sections/_process.scss
+++ b/public/src/scss/green-street/sections/_process.scss
@@ -88,7 +88,7 @@
 
 @media (min-width: $screen-sm-min) {
   .process-steps-inline {
-    max-width: 1200px;
+    max-width: $container-lg;
     margin-left: auto;
     margin-right: auto;
     img {
