--- a/public/src/scss/green-street/_sections.scss
+++ b/public/src/scss/green-street/_sections.scss
@@ -2,3 +2,8 @@
 @import "sections/clients";
 @import "sections/home";
 @import "sections/process";
+
+.section-title {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
