Added in SVG logo.  Resized some images

--- a/public/src/partials/header.html
+++ b/public/src/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header">
-  <img src="/img/logo-green-full.png" class="logo-image">
+  <div id="logo-image" class="header-logo header-logo--image"></div>
+  @@include('./logo.svg')
   <div class="blurb">
     <!-- Cannabis Creative Agency -->
     <span id="blurb-text">Creative Cannabis Agency</span>
