Added section backgrounds with scroll effects.  Added real clients to the grid.  Added licensing section

--- a/public/src/partials/section_clients.html
+++ b/public/src/partials/section_clients.html
@@ -1,85 +1,28 @@
 <div id="clients" style="background-color: salmon;">
   <div class="client-grid">
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-            Branding, identity, etc..
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/1.jpg);"></div>
+    <div class="grid-item" title="Bhang Medicinal Chocolate">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/bhang.jpg);"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/2.jpg)"></div>
+    <div class="grid-item" title="Grassp">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/grassp.jpg)"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/3.jpg)"></div>
+    <div class="grid-item" title="Grenco Science">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/grenco.jpg)"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/4.jpg)"></div>
+    <div class="grid-item" title="Stuffedibles">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/stuffed.jpg)"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/4.jpg)"></div>
+    <div class="grid-item" title="Tealer">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/tealer.jpg)"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/1.jpg)"></div>
+    <div class="grid-item" title="Sol Selects">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/sol_selects.jpg)"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/2.jpg)"></div>
+    <div class="grid-item" title="Green St. Sugar">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/green_street_sugar.jpg)"></div>
     </div>
-    <div class="grid-item">
-      <div class="grid-item-inner">
-        <div class="grid-item-info-container">
-          <div class="grid-item-info">
-            <div class="grid-item-title">Client 1</div>
-          </div>
-        </div>
-      </div>
-      <div class="grid-item-bg" style="background-image: url(/img/clients/3.jpg)"></div>
+    <div class="grid-item" title="Apothecanna">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/apothecanna.jpg)"></div>
     </div>
   </div>
 </div>
