--- a/public/src/partials/section_home.html
+++ b/public/src/partials/section_home.html
@@ -8,10 +8,16 @@
           Welcome to Green St
         </div>
         <div id="home-tagline-2" class="home-tagline">
-          A marijuana focused agency
+          A marijuana focused marketing agency
         </div>
-        
+
       </div>
     </div>
+  </div>
+  <div class="home-scroll-tickle">
+    <a href="#">
+      Get to know us
+      <img src="/img/down-arrow-black.png"/>
+    </a>
   </div>
 </div>
