--- a/public/src/partials/section_process.html
+++ b/public/src/partials/section_process.html
@@ -1,7 +1,7 @@
 <div id="process" class="slide slide--process">
   <div class="v-center">
     <div class="v-center-content">
-      
+      <h1 class="section-title">OUR PROCESS</h1>
       <div class="process-steps-inline clearfix">
         <div class="process-step-inline">
           <img src="/img/process/1.png"/>
