--- a/public/src/scss/_variables.scss
+++ b/public/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $brand-primary:           #0F6748 !default;
 $gs-blue:                 #28ACE2 !default;
 $gs-teal:                 #13A89E !default;
 $gs-magenta:              #9F1F63 !default;
+$gs-orange:               #CDA54B; //#D07224 !default;
 
 
 // Scaffolding
