--- a/public/src/scss/green-street/_sections.scss
+++ b/public/src/scss/green-street/_sections.scss
@@ -6,4 +6,6 @@
 .section-title {
   text-transform: uppercase;
   letter-spacing: 1px;
+  margin-top: 0;
+  margin-bottom: $line-height-computed * 2;
 }
