--- a/public/src/partials/footer.html
+++ b/public/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="footer" class="footer">
   <div class="container">
 
     <div class="row">
@@ -8,10 +8,10 @@
       <div class="col-sm-8 col-xs-12">
         <ul class="footer-links">
           <li><a href="#" data-overlay="#contact-form">contact</a></li>
-          <li><a href="#">about green st.</a></li>
-          <li><a href="#">privacy policy</a></li>
+          <!-- <li><a href="#">about green st.</a></li> -->
+          <!-- <li><a href="#">privacy policy</a></li> -->
           <li><a href="#">terms of use</a></li>
-          <li><a href="#">faq</a></li>
+          <!-- <li><a href="#">faq</a></li> -->
         </ul>
       </div>
     </div>
