--- a/public/src/scss/green-street/_touch.scss
+++ b/public/src/scss/green-street/_touch.scss
@@ -34,6 +34,9 @@
     left: 0px;
     top: 0px;
   }
+  .home-scroll-tickle {
+    display: none !important;
+  }
   .footer {
     margin-bottom: 80px;
   }
