--- a/public/src/scss/green-street/sections/_clients.scss
+++ b/public/src/scss/green-street/sections/_clients.scss
@@ -11,6 +11,19 @@
 // background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 20%,rgba(0,0,0,0.64) 100%);
 // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a3000000',GradientType=1 );
 
+/* SAMPLE MARKUP
+<div class="grid-item">
+  <div class="grid-item-inner">
+    <div class="grid-item-info-container">
+      <div class="grid-item-info">
+        <div class="grid-item-title">Client 1</div>
+      </div>
+    </div>
+  </div>
+  <div class="grid-item-bg" style="background-image: url(/img/clients/3.jpg)"></div>
+</div>
+*/
+
 .client-grid {
   .grid-item {
     position: relative;
@@ -68,7 +81,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-position: center;
+    background-position: center 25%;
     background-size: cover;
   }
 }
@@ -105,6 +118,9 @@
     .grid-item {
       width: 25%;
       padding-bottom: 25%;
+    }
+    .grid-item-bg {
+      background-position: center;
     }
   }
 }
