Added some final files before putting up on the internet

--- a/public/src/partials/footer.html
+++ b/public/src/partials/footer.html
@@ -11,7 +11,7 @@
           <!-- <li><a href="#">about green st.</a></li> -->
           <!-- <li><a href="#">privacy policy</a></li> -->
           <li><a href="#">terms of use</a></li>
-          <!-- <li><a href="#">faq</a></li> -->
+          <li><a href="http://www.instagram.com/greenstreetagency">Instagram</a></li>
         </ul>
       </div>
     </div>
