--- a/public/src/partials/section_clients.html
+++ b/public/src/partials/section_clients.html
@@ -7,7 +7,7 @@
       <div class="grid-item-bg" style="background-image: url(/img/clients/grassp.jpg)"></div>
     </div>
     <div class="grid-item" title="Grenco Science">
-      <div class="grid-item-bg" style="background-image: url(/img/clients/grenco.jpg)"></div>
+      <div class="grid-item-bg" style="background-image: url(/img/clients/grenco2.jpg)"></div>
     </div>
     <div class="grid-item" title="Stuffedibles">
       <div class="grid-item-bg" style="background-image: url(/img/clients/stuffed.jpg)"></div>
