swapped out some client images for brands we can actually show.

--- a/public/src/partials/section_clients.html
+++ b/public/src/partials/section_clients.html
@@ -3,8 +3,8 @@
     <div class="grid-item" title="Bhang Medicinal Chocolate">
       <div class="grid-item-bg" style="background-image: url(/img/clients/bhang.jpg);"></div>
     </div>
-    <div class="grid-item" title="Grassp">
-      <div class="grid-item-bg" style="background-image: url(/img/clients/grassp.jpg)"></div>
+    <div class="grid-item" title="Grenco Science">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/grenco4.jpg)"></div>
     </div>
     <div class="grid-item" title="Grenco Science">
       <div class="grid-item-bg" style="background-image: url(/img/clients/grenco2.jpg)"></div>
@@ -18,8 +18,8 @@
     <div class="grid-item" title="Sol Selects">
       <div class="grid-item-bg" style="background-image: url(/img/clients/sol_selects.jpg)"></div>
     </div>
-    <div class="grid-item" title="Green St. Sugar">
-      <div class="grid-item-bg" style="background-image: url(/img/clients/green_street_sugar.jpg)"></div>
+    <div class="grid-item" title="Nexus Glass">
+      <div class="grid-item-bg" style="background-image: url(/img/clients/nexus3.jpg)"></div>
     </div>
     <div class="grid-item" title="Apothecanna">
       <div class="grid-item-bg" style="background-image: url(/img/clients/apothecanna.jpg)"></div>
