--- a/public/src/partials/footer.html
+++ b/public/src/partials/footer.html
@@ -10,7 +10,7 @@
           <li><a href="#" data-overlay="#contact-form">contact</a></li>
           <!-- <li><a href="#">about green st.</a></li> -->
           <!-- <li><a href="#">privacy policy</a></li> -->
-          <li><a href="#">terms of use</a></li>
+          <!-- <li><a href="#">terms of use</a></li> -->
           <li><a href="http://www.instagram.com/greenstreetagency">Instagram</a></li>
         </ul>
       </div>
