--- a/public/src/scss/_overlay.scss
+++ b/public/src/scss/_overlay.scss
@@ -5,7 +5,7 @@
 // .overlay-open              - body class for killing the scroll
 // .overlay                   - container to scroll within
 // .overlay-content-container
-// .overlay-content 
+// .overlay-content
 
 .overlay {
   display: none;
@@ -85,10 +85,10 @@
   padding: 25px 0;
   @include opacity(0);
   transform: translateY(-20px);
-  -webkit-transition: -webkit-transform 300ms ease-out;
-     -moz-transition: -moz-transform 300ms ease-out;
-       -o-transition: -o-transform 300ms ease-out;
-          transition: transform 300ms ease-out;
+  -webkit-transition: -webkit-transform 300ms ease-out, opacity 300ms ease-out;
+     -moz-transition: -moz-transform 300ms ease-out, opacity 300ms ease-out;
+       -o-transition: -o-transform 300ms ease-out, opacity 300ms ease-out;
+          transition: transform 300ms ease-out, opacity 300ms ease-out;
 
   iframe {
     max-height: 250px;
@@ -117,7 +117,7 @@
          -moz-transition: -moz-transform 500ms ease-out;
            -o-transition: -o-transform 500ms ease-out;
               transition: transform 500ms ease-out;
-      transition-delay: 400ms;
+      transition-delay: 100ms;
     }
   }
 }
