--- a/public/src/partials/section_process.html
+++ b/public/src/partials/section_process.html
@@ -75,7 +75,7 @@
           Flawlessly carry out the plan and vision
         </div>
         <div class="process-step-description">
-          Look at the success as wall as ways to improve on future campaigns
+          Look at the success as well as ways to improve on future campaigns
         </div>
       </div>
 
