End of day commit.  Updated client images, backgrounds.  Added another section for celebrity licensing

--- a/public/src/partials/section_executions.html
+++ b/public/src/partials/section_executions.html
@@ -1,6 +1,6 @@
 <section id="executions" class="section--ability js--full-screen js--parallax">
   <div class="section-inner">
-    <div class="section-bg section-bg--blue"></div>
+    <div class="section-bg section-bg--teal"></div>
     <div class="section-content">
       <h2 class="section-header">scalable executions</h2>
       <ul class="section-points">
