--- a/public/src/partials/section_touch_points.html
+++ b/public/src/partials/section_touch_points.html
@@ -1,6 +1,6 @@
 <section id="touch-points" class="section--ability js--full-screen js--parallax">
   <div class="section-inner">
-    <div class="section-bg section-bg--purple"></div>
+    <div class="section-bg section-bg--magenta"></div>
     <div class="section-content">
       <h2 class="section-header">Consumer touch-points</h2>
       <ul class="section-points">
