--- a/public/src/partials/section_licensing.html
+++ b/public/src/partials/section_licensing.html
@@ -1,16 +1,16 @@
 <section id="licensing" class="section--ability js--full-screen js--parallax">
   <div class="section-inner">
-    <div class="section-bg section-bg--purple"></div>
+    <div class="section-bg section-bg--snoop"></div>
     <div class="section-content">
-      <h2 class="section-header">Licensing &amp; compliance</h2>
+      <h2 class="section-header">Partnerships &amp; Licensing</h2>
       <ul class="section-points">
-        <li>licensing agreements</li>
-        <li>contract negotiation</li>
-        <li>strategy</li>
+        <li>Influencer Network</li>
+        <li>Licensing Relationships</li>
+        <li>Contract negotiation</li>
       </ul>
       <div class="section-description">
         <!-- TODO - Rewrite copy -->
-        Connecting strategic partners and industry influencers with the right brands has been an essential component of our clients' long-term success.  This, coupled with our comprehensive understanding of local &amp; state marjuana regulations ensures success for your next idea.
+        Connecting strategic partners and industry influencers with the right brands has been an essential component of our clients' long-term success.
       </div>
     </div>
   </div>
