--- a/public/src/partials/section_intro.html
+++ b/public/src/partials/section_intro.html
@@ -1,5 +1,6 @@
 <section id="intro" class="js--full-screen js--parallax">
   <div class="section-inner">
+    <div class="section-bg intro-nugz"></div>
     <div class="section-content">
 
         <h1 class="intro-header">
@@ -22,8 +23,5 @@
         </div>
 
     </div>
-  </div>
-  <div class="section-bg">
-    <div class="intro-nugz"></div>
   </div>
 </section>
