Slight copy changes.  Removed weed images, added in succulent image

--- a/public/src/partials/footer.html
+++ b/public/src/partials/footer.html
@@ -2,7 +2,7 @@
 
   <address>
     Green Street<br/>
-    5651 Wilshire Blvd, Suite C<br/>
+    5651 Wilshire Blvd, Suite A<br/>
     Los Angeles, CA, 90036
   </address>
 
@@ -11,7 +11,5 @@
     <li><a href="#" data-overlay="#privacy-overlay">privacy policy</a></li>
     <li><a href="http://www.instagram.com/greenstreetagency">Instagram</a></li>
   </ul>
-
-  <div class="footer-bg"></div>
 
 </footer>
