--- a/public/src/partials/header.html
+++ b/public/src/partials/header.html
@@ -2,8 +2,7 @@
   <div id="logo-image" class="header-logo header-logo--image"></div>
   @@include('./logo.svg')
   <div class="blurb">
-    <!-- Cannabis Creative Agency -->
     <span id="blurb-text">Creative Cannabis Agency</span>
-    <img src="/img/leaf.png"  />
+    <!-- img src="/img/leaf.png" -->
   </div>
 </header>
