--- a/public/src/partials/overlay_privacy.html
+++ b/public/src/partials/overlay_privacy.html
@@ -143,7 +143,7 @@
         </p>
         <dl style="text-align:center">
           <dd>Greenstreetagency.com</dd>
-          <dd>5651 Wilshire Blvd. Suite. C</dd>
+          <dd>5651 Wilshire Blvd. Suite A</dd>
           <dd>Los Angeles, CA, 90036</dd>
           <dd>United States</dd>
           <dd>info@greenstreetagency.com</dd>
