--- a/public/src/partials/section_intro.html
+++ b/public/src/partials/section_intro.html
@@ -1,10 +1,10 @@
 <section id="intro" class="js--full-screen js--parallax">
   <div class="section-inner">
-    <div class="section-bg intro-nugz"></div>
+    <div class="section-bg intro-succulents"></div>
     <div class="section-content">
 
         <h1 class="intro-header">
-          Smoke and a pancake?
+          We grow ideas
         </h1>
 
         <div class="container">
