Final cleanup before pushing greenstreet live

--- a/public/src/partials/section_compliance.html
+++ b/public/src/partials/section_compliance.html
@@ -10,7 +10,7 @@
         <li>Regulatory Agency Liason</li>
       </ul>
       <div class="section-description">
-        A fundamental necessity for success is a comprehensive understanding of the current local and state regulations pertaining to cannabis cultivation and distribution.
+        A fundamental necessity for success is a comprehensive understanding of the current local and state regulations pertaining to cannabis cultivation and distribution.  We provide this expertise in addition to other legal services.
       </div>
     </div>
   </div>
