Removed client grid section from the site.  Added client logos to the closing panel

--- a/public/src/scss/green-street/_sections.scss
+++ b/public/src/scss/green-street/_sections.scss
@@ -1,7 +1,7 @@
 @import "sections/home";
 @import "sections/intro";
-@import "sections/clients";
-@import "sections/contact_us";
+// @import "sections/clients";
+@import "sections/closing";
 
 section {
   position: relative;
