Added logos that fade in and out

--- a/public/src/partials/closing.html
+++ b/public/src/partials/closing.html
@@ -2,18 +2,71 @@
   
   <h2 class="logo-grid-title">Our Partnerships</h2>
   <ul class="logo-grid">
-    <li><img src="/img/clients/knockouts/apothecanna.png" /></li>
-    <li><img src="/img/clients/knockouts/honeysupply.png" /></li>
-    <li><img src="/img/clients/knockouts/eaze.png" /></li>
-    <li><img src="/img/clients/knockouts/highlyeducated.png" /></li>
-    <li><img src="/img/clients/knockouts/nexus.png" /></li>
-    <li><img src="/img/clients/knockouts/raesremmurd.png" /></li>
-    <li><img src="/img/clients/knockouts/rickjames.png" /></li>
-    <li><img src="/img/clients/knockouts/snoopdogg.png" /></li>
-    <li><img src="/img/clients/knockouts/ssur.png" /></li>
-    <li><img src="/img/clients/knockouts/stash.png" /></li>
-    <li><img src="/img/clients/knockouts/tcase.png" /></li>
-    <li><img src="/img/clients/knockouts/tealer.png" /></li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/apothecanna.png" class="current" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/honeysupply.png" class="current" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/eaze.png" class="current" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/highlyeducated.png" class="current" />
+        <img src="/img/clients/knockouts/bhang.png" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/nexus.png" class="current" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/raesremmurd.png" class="current" />
+        <img src="/img/clients/knockouts/dirtyheads.png" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/rickjames.png" class="current" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/snoopdogg.png" class="current" />
+        <img src="/img/clients/knockouts/solselects.png" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/ssur.png" class="current" />
+        <img src="/img/clients/knockouts/sublime.png" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/stash.png" class="current" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/wakaflocka.png" class="current" />
+        <img src="/img/clients/knockouts/tcase.png" />
+      </div>
+    </li>
+    <li>
+      <div class="logo-frame">
+        <img src="/img/clients/knockouts/tealer.png" class="current" />
+      </div>
+    </li>
   </ul>
 
   <div class="closing-panel-divider"></div>
