Add logos for the game, m etheridge and gfarmalabs

--- a/public/src/partials/closing.html
+++ b/public/src/partials/closing.html
@@ -10,11 +10,13 @@
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/honeysupply.png" class="current" />
+        <img src="/img/clients/knockouts/gfarmalabs.png" />
       </div>
     </li>
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/eaze.png" class="current" />
+        <img src="/img/clients/knockouts/thegame.png" class="current" />
+        <img src="/img/clients/knockouts/eaze.png" />
       </div>
     </li>
     <li>
@@ -37,6 +39,7 @@
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/sublime.png" class="current" />
+        <img src="/img/clients/knockouts/melissaetheridge.png" />
       </div>
     </li>
     <li>
