--- a/public/src/partials/closing.html
+++ b/public/src/partials/closing.html
@@ -10,7 +10,7 @@
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/honeysupply.png" class="current" />
-        <img src="/img/clients/knockouts/gfarmalabs.png" />
+        <img data-lazy-src="/img/clients/knockouts/gfarmalabs.png" />
       </div>
     </li>
     <li>
@@ -21,7 +21,7 @@
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/highlyeducated.png" class="current" />
-        <img src="/img/clients/knockouts/bhang.png" />
+        <img data-lazy-src="/img/clients/knockouts/bhang.png" />
       </div>
     </li>
     <li>
@@ -32,13 +32,13 @@
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/raesremmurd.png" class="current" />
-        <img src="/img/clients/knockouts/dirtyheads.png" />
+        <img data-lazy-src="/img/clients/knockouts/dirtyheads.png" />
       </div>
     </li>
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/sublime.png" class="current" />
-        <img src="/img/clients/knockouts/melissaetheridge.png" />
+        <img data-lazy-src="/img/clients/knockouts/melissaetheridge.png" />
       </div>
     </li>
     <li>
@@ -59,7 +59,7 @@
     <li>
       <div class="logo-frame">
         <img src="/img/clients/knockouts/wakaflocka.png" class="current" />
-        <img src="/img/clients/knockouts/tcase.png" />
+        <img data-lazy-src="/img/clients/knockouts/tcase.png" />
       </div>
     </li>
     <li>
