Update address in footer.  Update README

--- a/public/src/partials/footer.html
+++ b/public/src/partials/footer.html
@@ -2,7 +2,7 @@
 
   <address>
     Green Street<br/>
-    5651 Wilshire Blvd, Suite A<br/>
+    5514 Wilshire Blvd, 11th Floor<br/>
     Los Angeles, CA, 90036
   </address>
 
